--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,14 @@
       ]
     }
   },
+  "files": [],
   "include": [
     "src"
   ],
   "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
     {
       "path": "./tsconfig.node.json"
     }
